SERVER-67227 Avoid implicit collection creation for `collectionUUID` with insert/update commands

(cherry picked from commit 41994ed8c080afb448b20c631a66bf782a9834c0)